--- a/style.css
+++ b/style.css
@@ -65,19 +65,43 @@ body {
     font-size: 18px;
     line-height: 1.6;
     color: #5a5a5a;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     display: none;
 }
 
-.message img {
+.small-text {
+    font-size: 13px;
+}
+
+.medium-text {
+    font-size: 14px;
+}
+
+.reduced img{
+    width: 50%;
+    height: auto;
+}
+
+.message-img {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
     width: 100%;
     height: auto;
-    margin-bottom: 10px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    object-fit: cover;
+}
+
+.message-img img{
+    width: 100%;
+    height: auto;
     border-radius: 25px;
+}
+
+/* New rule for multiple images in the same container */
+.message-img:has(img + img) img {
+    width: 48%;  /* Slightly less than 50% to account for gap */
+    display: flex;
+    margin-right: 2%;
+    justify-content: space-between;
 }
 
 .message.active {
